[package]
name = "blackjack"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blackjack"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.1", features = ["memo"] }
ephemeral-vrf-sdk = { version = "=0.1.2", features = ["anchor"] }
ephemeral-rollups-sdk = { version = "=0.2.5", features = ["anchor"] }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol.git", package = "light-hasher", features = ["solana"] }
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol.git", package = "light-sdk" }
light-compressed-account = { git = "https://github.com/Lightprotocol/light-protocol.git", package = "light-compressed-account" }


